added stockpicks.css as stylesheet.

--- a/web/html/stockpicks.html
+++ b/web/html/stockpicks.html
@@ -3,10 +3,11 @@
   <head>
     <meta charset="utf-8">
     <title>Stock Picks | Stocks.c</title>
+    <link href="/stockpicks.css" type="text/css" rel="stylesheet"/>
   </head>
   <body>
     <h1>Stock Picks</h1>
-    <table id="stockPicksTables">
+    <table id="stockPicksTable">
       <thead>
         <tr>
           <td id="tickerHead">Ticker</td>
