Added column to stock picks table

--- a/web/html/stockpicks.html
+++ b/web/html/stockpicks.html
@@ -11,8 +11,8 @@
       <thead>
         <tr>
           <td id="tickerHead">Ticker</td>
-          <td id="cPriceHead"> Current Price</td>
-          <td></td>
+          <td id="cPriceHead">Current Price</td>
+          <td id="chartHead">Stock Chart</td>
         </tr>
       </thead>
       <tbody>
