Updated login form

--- a/web/html/login.html
+++ b/web/html/login.html
@@ -5,11 +5,12 @@
     <title>Login | Stocks.c</title>
   </head>
   <body>
-    <form action="/login" method="GET">
+    <form action="/login" method="POST">
       <label for="username">Username: </label>
       <label for="password">Password: </label>
       <input type="text" name="username" id="username">
       <input type="password" name="password" id="password">
+      <input type="submit"/>
     </form>
   </body>
 </html>
